# adv_mla_lab_1

./: LICENSE  Lab1_exp01.ipynb  Makefile  README.md  pyproject.toml  setup.py
docs/: conf.py
models/: rf2.joblib
notebooks/: Lab1_exp01.ipynb  Lab1_exp02.ipynb
